@@ -1,3 +1,8 @@
+2004-06-04  Lutz Mueller <lutz@users.sourceforge.net>
+
+	* configure.in
+	* exif/actions.c: Make gphoto2 compile with libexif-0.6.9.
+
 2004-04-20  Colin Marquardt  <colin@marquardt-home.de>
 
 	* po/uk.po: Update.
